# messenger_with_web_interface

./: README.md
client/: index.html
messenger/: CMakeLists.txt
messenger/common/: logger.h  protocol.h
messenger/server/: db.h  json_helper.h  main.cpp  websocket.h
